# roboflow_workspace

./: .env  .gitignore  README.md  pyproject.toml
src/: main.py
src/checker/: data_format.py  debug_fix.py
src/config/: config.yaml
src/script/: __init__.py  predict.py  train.py  upload.py  video.py  video_cut.py
src/setup/: __init__.py  config.py
src/utils/: __init__.py  download_roboflow.py  logger.py  utils.py
