[project]
name = "Y25"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "chuntsehsu@gmail.com"},
]
dependencies = [
    "ultralytics>=8.3.222",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0",
    "roboflow>=1.2.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0"
    ]
    
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
