[project]
name = "roboflow_workspace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "chuntsehsu@gmail.com"},
]
dependencies = [
    "ultralytics>=8.3.223",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.3",
    "roboflow>=1.2.11",
    "pyrealsense2>=2.56.5.9235",
    "opencv-contrib-python<4.10",
    "numpy<2",
]
    
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
